logs/Slang/generated/hdlconv/hdlconvertor_p706.sv.log
name: hdlconvertor_p706
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p706.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p706.sv:17:10: warning: port 'datain' has no connection [-Wunconnected-port]
bus_conn bconn1 (dataout[23:16]);
         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p706.sv:22:10: warning: port 'datain' has no connection [-Wunconnected-port]
bus_conn bconn3 (dataout[7:0]);
         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p706.sv:37:13: error: identifier 'MSB' used before its declaration
wire logic [MSB:LSB] out;
            ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p706.sv:28:11: note: declared here
parameter MSB=3,LSB=0, DEPTH=4; // these parameters can be redefined
          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p706.sv:37:17: error: identifier 'LSB' used before its declaration
wire logic [MSB:LSB] out;
                ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p706.sv:28:17: note: declared here
parameter MSB=3,LSB=0, DEPTH=4; // these parameters can be redefined
                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p706.sv:45:22: error: use of undeclared identifier 'write'
input wire clk, read,write reset,
                     ^~~~~
